docs: update AGENT_LOG with Task 5-9 implementation details